Added psuedocode and personal reminders

--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -6,6 +6,9 @@
     <title>Highscores!</title>
 </head>
 <body>
-    
+    <!--Add table to show the locally stored array of objects of scores-->
+    <!--Add go back to start button-->
+    <!--Add button to clear locally stored highscores-->
+    <script src="./script.js"></script>
 </body>
 </html>
