--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="assets/highscores.html">View Highscores!</a>
         </nav>
+
+        <!--Jordan you gotta finish making the homepage and make it look good using bootstrap-->
+
+        <!--Create divs for everything you'll need on the page-->
         <h1>
             Test your knowledge on the NBA!
         </h1>
