Finished Starter HTML

--- a/index.html
+++ b/index.html
@@ -17,23 +17,41 @@
         <!-- High Score Nav Link -->
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="assets/highscores.html">View Highscores!</a>
+            <p class="justify-content-end" id="timer">Timer Will Start When You Do!</p>
         </nav>
 
         <!--Jordan you gotta finish making the homepage and make it look good using bootstrap-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1">
+                    <!--Empty space-->
+                </div>
+                <div class="col-md-10">
+                    <!--Create divs for everything you'll need on the page-->
+                    <h1 class="mt-3" id="question">
+                        Test your knowledge on the NBA!
+                    </h1>
 
-        <!--Create divs for everything you'll need on the page-->
-        <h1>
-            Test your knowledge on the NBA!
-        </h1>
+                    <p class="mt-3" id="starterParagraph">
+                        Do you like basketball? Do you love the greatest athletic league in the world? Do you know
+                        pointless random
+                        facts about millionaires getting paid by billionaires to dribble a ball? Well do we have the
+                        quiz for you! Click the button below to get started!
+                    </p>
 
-        <p>
-            Do you like basketball? Do you love the greatest athletic league in the world? Do you know pointless random
-            facts? Well do we have the quiz for you! Click the button below to get started!
-        </p>
+                    <form id="buttonGroup">
+                        <button type="button" class="btn btn-primary" id="startButton">Start Quiz!</button>
+                    </form>
 
 
 
-        <script src="./assets/script.js"></script>
+                    <script src="./assets/script.js"></script>
+                </div>
+                <div class="col-md-1">
+                    <!--Empty Space-->
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
