Added question array, basic highscore.html layout, and gameStart function start

--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Links bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
+        integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
+    <!--Links local CSS-->
+    <link type="stylesheet" href="assets/style.css">
     <title>Highscores!</title>
 </head>
+
 <body>
-    <!--Add table to show the locally stored array of objects of scores-->
-    <!--Add go back to start button-->
-    <!--Add button to clear locally stored highscores-->
-    <script src="./script.js"></script>
+    <main>
+        <!-- Start Over Nav Link -->
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="../index.html">Start Over!</a>
+        </nav>
+        <!--Add table to show the locally stored array of objects of scores-->
+        <!--Add go back to start button-->
+        <!--Add button to clear locally stored highscores-->
+        <script src="./script.js"></script>
+    </main>
 </body>
+
 </html>
