Added working timer and starter for other functions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Do you like basketball? Do you love the greatest athletic league in the world? Do you know
                         pointless random
                         facts about millionaires getting paid by billionaires to dribble a ball? Well do we have the
-                        quiz for you! Click the button below to get started!
+                        quiz for you! Let's see what you can do in 100 seconds. Click the button below to get started!
                     </p>
 
                     <form id="buttonGroup">
