displayQuestion triggers setQuestion iteration and setQuestion adds question and all choice buttons

--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -21,7 +21,7 @@
         <!--Add table to show the locally stored array of objects of scores-->
         <!--Add go back to start button-->
         <!--Add button to clear locally stored highscores-->
-        <script src="./script.js"></script>
+        <script src="./scores.js"></script>
     </main>
 </body>
 
