--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col-md-1">
                     <!--Empty space-->
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10" id="quizHolder">
                     <!--Create divs for everything you'll need on the page-->
                     <h1 class="mt-3" id="question">
                         Test your knowledge on the NBA!
@@ -41,6 +41,7 @@
 
                     <form id="buttonGroup">
                         <button type="button" class="btn btn-primary" id="startButton">Start Quiz!</button>
+                          </div>
                     </form>
 
 
