displays scores in highscores page from local storage

--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -18,10 +18,22 @@
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="../index.html">Start Over!</a>
         </nav>
-        <!--Add table to show the locally stored array of objects of scores-->
-        <!--Add go back to start button-->
-        <!--Add button to clear locally stored highscores-->
-        <script src="./scores.js"></script>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1">
+                    <!--Empty space-->
+                </div>
+                <div class="col-md-10" id="scoresHolder">
+                    <ol id="scoresList"></ol>
+
+                    </ol>
+                    <script src="./scores.js"></script>
+                </div>
+                <div class="col-md-1">
+                    <!--Empty Space-->
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
