button clears scores

--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -24,16 +24,17 @@
                     <!--Empty space-->
                 </div>
                 <div class="col-md-10" id="scoresHolder">
-                    <ol id="scoresList"></ol>
+                    <ol class="list-group m-3" id="scoresList">
 
                     </ol>
-                    <script src="./scores.js"></script>
+                    <button type="button" class="btn btn-primary" id="reset">Reset Scores</button>
                 </div>
                 <div class="col-md-1">
                     <!--Empty Space-->
                 </div>
             </div>
         </div>
+        <script src="./scores.js"></script>
     </main>
 </body>
 
