--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <!--Links bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
         integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
-    <!--Links local CSS-->
-    <link type="stylesheet" href="assets/style.css">
     <title>NBA Quiz</title>
 </head>
 
@@ -20,17 +18,21 @@
             <p class="justify-content-end" id="timer">Timer Will Start When You Do!</p>
         </nav>
 
+        <!--Bootstrap responsive container-->
         <div class="container">
+            <!--Row for all content-->
             <div class="row">
                 <div class="col-md-1">
                     <!--Empty space-->
                 </div>
+                <!--Column for questions and answers-->
                 <div class="col-md-10" id="quizHolder">
-                    <!--Create divs for everything you'll need on the page-->
+                    <!--Where questions will be placed-->
                     <h1 class="mt-3" id="question">
                         Test your knowledge on the NBA!
                     </h1>
 
+                    <!--Just a intro paragraph-->
                     <p class="mt-3" id="starterParagraph">
                         Do you like basketball? Do you love the greatest athletic league in the world? Do you know
                         pointless random
@@ -38,13 +40,14 @@
                         quiz for you! Let's see what you can do in 100 seconds. Click the button below to get started!
                     </p>
 
+                    <!--Will hold answer buttons-->
                     <form id="buttonGroup">
                         <button type="button" class="btn btn-primary" id="startButton">Start Quiz!</button>
                 </div>
                 </form>
 
 
-
+                <!--Calls js just for questions-->
                 <script src="./assets/script.js"></script>
             </div>
             <div class="col-md-1">
