--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                     <!--Just a intro paragraph-->
                     <p class="mt-3" id="starterParagraph">
                         Do you like basketball? Do you love the greatest athletic league in the world? Do you know
-                        pointless random
-                        facts about millionaires getting paid by billionaires to dribble a ball? Well do we have the
-                        quiz for you! Let's see what you can do in 100 seconds. Click the button below to get started!
+                        pointless random facts about millionaires getting paid by billionaires to dribble a ball? 
+                        Well do we have the quiz for you! Let's see what you can do in 100 seconds. Try to answer as 
+                        quickly as you can! The more time you save, the higher your score! If you get a question wrong, 
+                        you will lose 10 seconds, and therefore, 10 points! Click the button below to get started!
                     </p>
 
                     <!--Will hold answer buttons-->
