--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- High Score Nav Link -->
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="assets/highscores.html">View Highscores!</a>
-            <p class="justify-content-end" id="timer">Timer Will Start When You Do!</p>
+            <p class="justify-content-end" id="timer">Timer Will Display Here When You Start!</p>
         </nav>
 
         <!--Bootstrap responsive container-->
@@ -36,9 +36,10 @@
                     <p class="mt-3" id="starterParagraph">
                         Do you like basketball? Do you love the greatest athletic league in the world? Do you know
                         pointless random facts about millionaires getting paid by billionaires to dribble a ball? 
-                        Well do we have the quiz for you! Let's see what you can do in 100 seconds. Try to answer as 
+                        Well, do we have the quiz for you! Let's see what you can do in 100 seconds. Try to answer as 
                         quickly as you can! The more time you save, the higher your score! If you get a question wrong, 
-                        you will lose 10 seconds, and therefore, 10 points! Click the button below to get started!
+                        you will lose 10 seconds, and therefore, 10 points! All scores will be saved in your local storage! 
+                        Click the button below to get started!
                     </p>
 
                     <!--Will hold answer buttons-->
